# wc

./: .gitignore  README.md  dune-project  wc.opam
lib/: dune
test/: dune
